force-app/main/default/objects/Opt_Out__c/Opt_Out__c.object-meta.xml
<CustomObject>
    <description>Stores OptOut information, records are deleted daily.</description>
    <label>Opt-Out</label>
    <nameField>
        <label>Opt-Out Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opt-Out</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>