force-app/main/default/objects/Opt_Out__c/fields/Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt-In</label>
    <type>Checkbox</type>
</CustomField>