force-app/main/default/objects/Opt_Out__c/fields/Send_To_PF__c.field-meta.xml
<CustomField>
    <fullName>Send_To_PF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send To PF</label>
    <type>Checkbox</type>
</CustomField>